# CAN-Device-Sim

./: Cargo.toml  LICENSE  README.md
example-configs/: BMS-STATE-ACK.json  HIL-Testing No-Faults All-devices.json
schema/: config.json
scripts/: float_to_bytes.py  run-with-examples.sh  setup.sh  web.sh
src/: device_manager.rs  lib.rs  main.rs
src/config/: mod.rs
src/config/device/: common.rs  mod.rs  producer.rs  responder.rs
web/: package-lock.json  package.json
web/pages/: index.js
web/pages/api/: config.js  schema.js
