[package]
name = "virtual_can_device"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# text_io = "0.1.9"
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socketcan = { version = "1.7.0" }
text_io = { git="https://github.com/Quinn1876/rust-si", branch="Fix-Multiple-Read-Error" }
