[package]
name = "virtual_can_device"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socketcan = { version = "1.7.0" }
text_io = "0.1.10"
clap = { version = "3.1.2", features = ["derive"] }